<resources>
    <string name="app_name">HomeWork06</string>

    <string-array name="day">
        <item name="select">Select</item>
        <item name="monday">Monday</item>
        <item name="tuesday">Tuesday</item>
        <item name="wednesday">Wednesday</item>
        <item name="thursday">Thursday</item>
        <item name="friday">Friday</item>
    </string-array>

    <string-array name="time">
        <item name="am">AM</item>
        <item name="pm">PM</item>
    </string-array>

    <string-array name="semester">
        <item name="select">Select Semester</item>
        <item name="fall">Fall</item>
        <item name="spring">Spring</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hintPassword">Password (min 8 characters)</string>
    <string name="hintFirstName">First name</string>
    <string name="hintLastName">Last name</string>
    <string name="registerButton">Register</string>
    <string name="hintUserName">Username</string>
    <string name="titleLabel">Title</string>
    <string name="chooseInstructorLabel">Choose Instructor</string>
    <string name="scheduleLabel">Schedule</string>
    <string name="creditLabel">Credit Hours</string>
    <string name="semLabel">Semester</string>
    <string name="resetButton">Reset</string>
    <string name="createButton">Create</string>
</resources>